--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>webcodingmedia - Home</title>
-    <meta content="" name="description">
+    <title>Fansyah Dwi Krisnady</title>
+    <meta content="" name="des  cription">
 
     <meta content="" name="keywords">
 
@@ -44,7 +44,7 @@
 
             <a href="index.html" class="logo d-flex align-items-center">
                 <!-- <img src="assets/img/logo.png" alt=""> -->
-                <span>webcodingmedia</span>
+                <span>Fansyah Dwi Krisandy</span>
             </a>
 
             <nav id="navbar" class="navbar">
