--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/>Fansyah Dwi <span>Krisnady</span></h2>
+    <h2>Hi There,<br/>Fansyah Dwi Krisnady <span>IT maintenace & Development Staff</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
