--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div id="particles-js"></div>
 
     <div class="content">
-    <h2>Hi There,<br/>Fansyah Dwi Krisnady <span>IT maintenace & Development Staff</span></h2>
+    <h2>Hi There,<br/>Fansyah DK  <br> <span>IT maintenace & Development Staff</span></h2>
     <p>i am into <span class="typing-text"></span></p>
     <a href="" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
@@ -76,7 +76,7 @@
         <img draggable="false" class="tilt" src="./assets/images/profile.png" alt="">
     </div>
     <div class="content">
-        <h6>Fansyah Dwi Krisnady</h6>
+        <h3>Fansyah Dwi Krisnady</h3>
         <span class="tag">Full Stack Developer | IT maintenace & Development Staff</span>
         
         <p >I am a full-stack website developer, I come from Indonesia, West Java, Palimanan, I have a good understanding of algorithms in solving programming problems, I can work alone or in a team, and have good communication both verbally and in writing </p>
