--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Favicon -->
-    <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png">
+    <!-- <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-png"> -->
     <title>Portfolio | Fansyah Dwi Krisnady</title>
 </head>
 <body oncontextmenu="return false">
@@ -135,23 +135,23 @@
 
     <div class="box">
         <div class="image">
-        <img draggable="false" src="./assets/images/educat/college.jpg" alt="">
+        <img draggable="false" src="./assets/images/educat/dataa.jpg" alt="">
         </div>
         <div class="content">
-        <h3>Bachelor of Engineering in Information Technology</h3>
-        <p>Zeal College of engineering and research | SPPU</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h3>Sekolah Tinggi Ilmu Komputer Poltek Cirebon</h3>
+        <p>Informatics Engineering | TI</p>
+        <h4>2019-2023 | Pursuing</h4>
         </div>
     </div>
 
     <div class="box">
       <div class="image">
-      <img draggable="false" src="./assets/images/educat/school.jpg" alt="">
+      <img draggable="false" src="./assets/images/educat/sw.jpg" alt="">
       </div>
       <div class="content">
-      <h3>HSC Science | Informatic Practices</h3>
-      <p>Shri  L. G. Haria Multipurpose School | CBSE</p>
-      <h4>2018-2020 | Completed</h4>
+      <h3>SMK Al Musyawirin</h3>
+      <p> Teknik Komputer & Jaringan | TKJ</p>
+      <h4>2015-2019 | Completed</h4>
       </div>
     </div>
 
