--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="https://drive.google.com/file/d/1rZiXl562q7aVyk1kJ2nO85YBAq8ixTiw/view" target="_blank" class="btn"><span>Resume</span>
+            <a href="" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
@@ -152,6 +152,26 @@
       <h3>SMK Al Musyawirin</h3>
       <p> Teknik Komputer & Jaringan | TKJ</p>
       <h4>2015-2019 | Completed</h4>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./assets/images/educat/dataa23.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>SDN Negeri 2 Kepuh</h3>
+      <p> Sekolah Umum</p>
+      <h4>2008-2013 | Completed</h4>
+      </div>
+    </div>
+    <div class="box">
+      <div class="image">
+      <img draggable="false" src="./assets/images/educat/dataww2.jpg" alt="">
+      </div>
+      <div class="content">
+      <h3>SMP Negeri 2 Palimanan</h3>
+      <p> Sekolah Umum</p>
+      <h4>2013-2015 | Completed</h4>
       </div>
     </div>
 
