--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="content">
     <h2>Hi There,<br/>Fansyah DK  <br> <span>IT maintenace & Development Staff</span></h2>
     <p>i am into <span class="typing-text"></span></p>
-    <a href="https://drive.google.com/drive/folders/1T505ZqDF1gQsVoxzsOrgXEvWSIYjBhto?usp=sharing" class="btn"><span>About Me</span>
+    <a href="" class="btn"><span>About Me</span>
       <i class="fas fa-arrow-circle-down"></i>
     </a>
     <div class="socials">
@@ -93,7 +93,7 @@
         </div>
         
         <div class="resumebtn">
-            <a href="" target="_blank" class="btn"><span>Resume</span>
+            <a href="https://drive.google.com/file/d/1ItvmdI8_JmA30b8RTzM4KlAmcYAPtBpL/view?usp=sharing" target="_blank" class="btn"><span>Resume</span>
                 <i class="fas fa-chevron-right"></i>
             </a>
         </div>
